# mine_sweeper_p1

./: .gitignore  CMakeLists.txt  function-library.h  projekt_main.c
algorithm/: run_algorithm.c
map_creation/: map_initializer.c
map_processing/: parse_map.c  process_map.c  read_map.c
src/: CMakeLists.txt  function-library.c  function-library.h  projekt_main.c
src/algorithm/: run_algorithm.c
src/map_processing/: parse_map.c  process_map.c  read_map.c
